{
    "name": "MobileInput",
    "maps": [
        {
            "name": "Touch",
            "id": "6fd098c5-8c2f-4ff6-a4ca-69090f782454",
            "actions": [
                {
                    "name": "PrimaryContect",
                    "type": "PassThrough",
                    "id": "dbefa916-04d6-4e8d-84a4-b81875f582ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "4d8b4b79-329b-4cd2-b377-0bd7682bb10e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0a21cca1-bad1-4c5f-8cc6-8271861e2d43",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88618a34-cbac-41a4-9b02-daa06afe2db2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fed9b5d-5d1d-47f8-af64-dd63cbb3a99a",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "867a8297-67ca-427a-bd6b-db71e677e91d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}